<resources>
    <string name="app_name">Priape</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_Email">Email</string>
    <string name="hint_Pass">Mot de passe</string>
    <string name="login">Connexion</string>
    <string name="title_activity_activity_search">activity_search</string>
    <string name="title_activity_search">Search</string>
    <string name="login_loading">Connexion en cours&#8230;</string>
    <string name="Signup">Inscrivez-vous</string>
    <string name="forgotten_password">Mot de passe oublié?</string>
    <string name="title_activity_register">Register</string>
    <string name="hint_name">nom</string>
    <string name="hint_validatePassword">Valider mot de passe</string>
    <string name="register">Inscription</string>
    <string name="progress_inscription">Inscription en cours&#8230;</string>
    <string name="registerSuccess">Un email vous sera envoyé. Vous pouvez vous connecter</string>
    <string name="search">Rechercher</string>
    <string name="worksSearch">Je recherche un : </string>
    <string name="logout">Déconnexion</string>
    <string name="Works">Pour réaliser : </string>
    <string name="search_loading">Recherche&#8230;</string>
    <string name="results">Résultats</string>
    <string name="list_menu">Liste</string>
    <string name="update">Mise à jour&#8230;</string>
    <string name="description">Description de l entreprise : </string>
    <string name="SearchByName">Rechercher par nom</string>
    <string name="location">où nous trouver : </string>
    <string name="profil">Votre profil</string>
    <string name="notfound">Aucun professionels trouvés</string>
    <string name="badPassword">Veuillez faire correspondre les mot de passes</string>
    <string name="accept">Valider</string>
    <string name="comment">commentaires</string>
    <string name="send">poster</string>
    <string name="errorEmailInscription">Email incorrect</string>
    <string name="errorEmail">veuillez entrer une adresse électronique valable</string>
    <string name="toast_message_success_recovery">Un email vous a été envoyé</string>
    <string name="newComment">Nouveau commentaire</string>
    <string name="note">Note générale :</string>
    <string name="noone">Aucune notes</string>
    <string name="ok">ok</string>
    <string name="professional">Professionel ?</string>
    <string name="site"><u>Rendez-vous sur notre site</u></string>
    <string name="Emailentries">Entrez votre email</string>
    <string name="forgetpassword">Réinitialisation de votre mot de passe</string>
    <string name="sendemail">Un email vous a été envoyé</string>
    <string name="getSession">Récuperation de la session&#8230;</string>
    <string name="deleteUser">Supprimer ce compte</string>
    <string name="deleteSur">Êtes-vous sur de vouloir supprimer votre compte ?</string>
    <string name="deleting">Suppression&#8230;</string>


    <string name="error_3020">Impossible de trouver l\'utilisateur avec le login spécifié</string>
    <string name="error_3025">Une erreur est survenue lors de la récupération du mot de passe. </string>

    <!-- Backendless Errors-->
    <string name="error_fields">Veuillez remplir tous les champs.</string>
    <string name="error_3003">Mauvais identifiants.</string>
    <string name="error_others">Une erreur est survenue.</string>
    <string name="NotFoundLocalisation">Localisation introuvable</string>
    <string name="NoInternet">Aucune connexion internet.</string>


    <!-- Google map API -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCuUrtlDUm6NrTwjKuZNDl4UtFyBdXIKXA
    </string>

    <string name="E3004">test</string>

    <array name="works_name">
        <item>Maçon</item>
        <item>Jardinier</item>
        <item>plafonneur</item>
        <item>Electricien</item>
        <item>Menuisier</item>
        <item>Carreleur</item>
    </array>
    <string name="title_activity_list_professional">ListProfessionalActivity</string>
    <string name="title_activity_professionals">professionalsActivity</string>
</resources>
