

<layout>
    <data>
        <variable name="LoginActivity" type="com.example.francois.priape.LoginActivity"/>
    </data>
    <RelativeLayout
        android:background="@color/colorLightPrimary"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/ignored"
        android:orientation="horizontal"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            />

    <android.support.v7.widget.CardView
        android:id="@+id/LoginCard"
        android:layout_margin="16dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:drawableLeft="@drawable/ic_social_person"
                android:id="@+id/email"
                app:met_floatingLabel="normal"
                android:drawablePadding="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:maxLines="1"
                android:singleLine="true"
                android:text="francois@priape.be"
                android:hint="@string/hint_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                 />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:drawableLeft="@drawable/ic_action_lock"
                android:id="@+id/password"
                android:drawablePadding="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:maxLines="1"
                app:met_floatingLabel="normal"
                android:singleLine="true"
                android:hint="@string/hint_Pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
              />
            <Button
                android:id="@+id/loginButton"
                android:text="@string/login"
                android:layout_margin="16dp"
                android:textColor="#FFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                android:alpha="0.12"
                android:layout_alignParentBottom="true"/>
            <TextView
                android:id="@+id/Login_register"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Signup"
                android:textColor="@color/colorDarkPrimary"
                android:layout_gravity="right"
                />
            <TextView
                android:id="@+id/login_forgot_password"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotten_password"
                android:textColor="@color/colorDarkPrimary"
                android:layout_gravity="right"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>
    </RelativeLayout>

    </layout>