<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="User"
            type="com.example.francois.priape.Model.User"/>
    </data>

    <ScrollView
        android:background="@color/colorPrimary"

        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/ignored"
            android:orientation="horizontal"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/register_picture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_no_picture"
                app:civ_border_width="1dp"
                android:layout_centerHorizontal="true"
                app:civ_border_color="@color/colorDarkPrimary"
                bind:pictureUrlProfessional="@{User.picture}"
                />
        </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/RegisterCard"
        android:layout_margin="16dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.rengwuxian.materialedittext.MaterialEditText
                android:drawableLeft="@drawable/ic_communication_email"
                android:id="@+id/Register_email"
                android:drawablePadding="8dp"
                app:met_floatingLabel="normal"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/hint_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:drawableLeft="@drawable/ic_social_person"
                android:id="@+id/Register_name"
                android:drawablePadding="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:met_floatingLabel="normal"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/hint_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:drawableLeft="@drawable/ic_action_lock"
                android:id="@+id/Register_password"
                android:drawablePadding="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:met_floatingLabel="normal"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/hint_Pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:drawableLeft="@drawable/ic_communication_vpn_key"
                android:id="@+id/Register_repassword"
                android:drawablePadding="8dp"
                android:layout_marginTop="8dp"
                app:met_floatingLabel="normal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/hint_validatePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
            <Button
                android:id="@+id/Register_register"
                android:text="@string/register"
                android:layout_margin="16dp"
                android:textColor="#FFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Register"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    </LinearLayout>
    </ScrollView>
</layout>